# japi-base

./: .gitignore  Architectuurdocument Japi Base Editor.txt  LICENSE  README.md  context.md
Japi Base Pico 2/: CMakeLists.txt  demo.c  demo.h  hw_config.c  japi_base.c  japi_base.h  japi_base.pio  japi_kbd_defaults.h  japi_pin_config.c  japi_pin_config.h  main.c  starry_image.h  third_party_libs.c  third_party_libs.h
Japi Base Pico 2/FatFs_SPI/: CMakeLists.txt
Japi Base Pico 2/FatFs_SPI/ff15/source/: diskio.c
editor/: jbe.c  jbe.h  jbe_main.c  jbe_test.c
hardware/: README.md
keyboard layouts/: AZERTY_BE.kbd  AZERTY_FR.kbd  QWERTY_BE.kbd  QWERTY_UK.kbd  QWERTY_US.kbd  QWERTZ_DE.kbd  README.txt
sim/: .gitignore  Makefile  README.md  japi_sim.c  japi_sim.h  seam_app.c  sim_bitmap_test.c  sim_demo  sim_demo.c  sim_gfx_demo.c  sim_test  sim_test.c
sim/shim/: ff.h  lfs.h
tools/: gen_starry.py  synth_demo.py
